peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/Contract_Misc_Billable__c.object-meta.xml
<CustomObject>
    <label>Contract Misc Billable</label>
    <nameField>
        <displayFormat>CMB-{0000}</displayFormat>
        <label>Contract Misc Billable Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Misc Billables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>