peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>IF( AND( First_Payment_Date__c &lt;= TODAY() , Final_Payment_Date__c &gt;= TODAY() ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>