peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Asset_ID__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset ID</label>
    <referenceTo>Contract_Asset__c</referenceTo>
    <relationshipLabel>Contract Misc Billables</relationshipLabel>
    <relationshipName>Contract_Misc_Billables</relationshipName>
    <type>Lookup</type>
</CustomField>