peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Billing_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Billing_Cycle__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Billing Cycle</label>
    <length>80</length>
    <type>Text</type>
</CustomField>