peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Continue_Billing_after_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Continue_Billing_after_Disposition__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Continue Billing after Disposition</label>
    <type>Checkbox</type>
</CustomField>