peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract Misc Billables</relationshipLabel>
    <relationshipName>Contract_Misc_Billables</relationshipName>
    <type>Lookup</type>
</CustomField>