peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Misc Billables</relationshipLabel>
    <relationshipName>Contract_Misc_Billables</relationshipName>
    <type>Lookup</type>
</CustomField>