peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Dealer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Invoice__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dealer Invoice</label>
    <length>80</length>
    <type>Text</type>
</CustomField>