peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Final_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Final Payment Date</label>
    <type>Date</type>
</CustomField>