peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>G/L Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>