peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Include_in_Rental__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Rental__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Rental</label>
    <type>Checkbox</type>
</CustomField>