peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>Misc_Amount_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Amount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>