peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_County_Tax__c.field-meta.xml
<CustomField>
    <fullName>Misc_County_Tax__c</fullName>
    <label>Misc County Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>