peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_Key__c.field-meta.xml
<CustomField>
    <fullName>Misc_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Misc Key</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>