peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_Key_Unique__c.field-meta.xml
<CustomField>
    <fullName>Misc_Key_Unique__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Integration from DW will populate this field info</inlineHelpText>
    <label>Misc Key Unique</label>
    <length>255</length>
    <type>Text</type>
</CustomField>