peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_Variable_Date__c.field-meta.xml
<CustomField>
    <fullName>Misc_Variable_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Misc Variable Date</label>
    <type>DateTime</type>
</CustomField>