peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Misc_Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Misc_Variable_Rate__c</fullName>
    <label>Misc Variable Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>