peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Miscellaneous_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Item_Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Miscellaneous Item Description</label>
    <type>TextArea</type>
</CustomField>