peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Miscellaneous_Item_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Miscellaneous_Item_Due_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Miscellaneous Item Due Date</label>
    <type>Date</type>
</CustomField>