peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Open_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Open_Item_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Open Item Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>