peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Pay_Dealer_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Dealer_Code__c</fullName>
    <label>Pay Dealer Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>Do not pay the dealer</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Pay dealer</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Service dealer</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Pay customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>