peac_dev/force-app/main/default/objects/Contract_Misc_Billable__c/fields/Total_Misc_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Misc_Amount__c</fullName>
    <label>Total Misc Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>